Disable horizontal scroll to prevent page from overflowing

--- a/ui/src/app/global.scss
+++ b/ui/src/app/global.scss
@@ -3,6 +3,8 @@
 }
 
 body {
+  overflow-x: hidden;
+
   > .MuiDialog-root {
     & + .MuiDialog-root .MuiBackdrop-root {
       transition: none !important;
